--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -13,15 +13,15 @@
                 
     
                 <div class="py-12 sm:pb-12 sm:pt-12 md:py-12 px-8 sm:px-6 lg:px-8 lg:max-w-[80vw] mx-auto">
-                    <img src="visuals/hero.png" class="lg:w-2/3 mx-auto" alt="">
+                    <img src="visuals/oitt_25_full_line_up.png" class="lg:w-2/3 mx-auto" alt="">
             </div>
             </div>
             {{ partial:page_builder/block }}
-            <div class="flex flex-col items-center justify-center gap-y-0 leading-none text-osmosis-gray mb-8">
+            {{# <div class="flex flex-col items-center justify-center gap-y-0 leading-none text-osmosis-gray mb-8">
                 {{ first_wave_artists }}
                     <span class="font-tf1 text-[70px] lg:text-[90px]" style="line-height: 0.7">{{ value }}</span>
                 {{ /first_wave_artists }}
-            </div>
+            </div> #}}
             <article class="prose-sm lg:prose mt-10 mb-6 xl:my-12 max-w-xl mx-auto prose-a:text-primary text-center">
                 {{ early_bird_paragraph }}
             </article>
