--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -75,7 +75,7 @@
                 <a target="_blank"
                 rel=""
                 class="text-black bg-primary px-6 py-5 lg:px-4 lg:py-3 rounded-5xl transition font-mono hover:bg-osmosis-orange inline-block"
-                href="{{ configuration:tickets_link }}">Early bird tickets</a>
+                href="{{ configuration:tickets_link }}">Buy tickets</a>
             </div>
             {{ partial:layout/footer }}
             {{# <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
