fix to hero and nav layout

--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -15,7 +15,7 @@
                     {{ early_bird_paragraph }}
                 </article>
                 <div class="py-12 sm:pb-12 sm:pt-12 md:py-12 px-8 sm:px-6 lg:px-8 lg:max-w-[80vw] mx-auto">
-                    <img src="visuals/oitt_25_full_line_up.png" class="lg:w-2/3 mx-auto" alt="">
+                    <img src="visuals/OITT25_FULL LINEUP_small2x@2x.png" class="lg:w-2/3 mx-auto" alt="">
             </div>
             </div>
             {{ partial:page_builder/block }}
