--- a/resources/views/navigation/_main.antlers.html
+++ b/resources/views/navigation/_main.antlers.html
@@ -4,7 +4,7 @@
 #}}
 
 {{# The desktop navigation. Hidden on smaller screen. Shown from md and up. #}}
-{{ partial:navigation/main_desktop }}
+{{# {{ partial:navigation/main_desktop }} #}}
 
 {{# The mobile navigation. Hidden from md and up #}}
 {{ partial:navigation/main_mobile }}
