--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -15,8 +15,53 @@
                     {{ early_bird_paragraph }}
                 </article>
                 <div class="py-12 sm:pb-12 sm:pt-12 md:py-12 px-8 sm:px-6 lg:px-8 lg:max-w-[80vw] mx-auto">
+                    <div id="schedule-grid" class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-12">
+                        <a href="/visuals/OITT-2025_schedule_color_version_THURSDAY_9x16.PNG" target="_blank" class="block" data-day="thursday" data-date="2025-09-25">
+                            <img src="/visuals/OITT-2025_schedule_color_version_THURSDAY_9x16.PNG" class="w-full h-auto" alt="Thursday Schedule">
+                        </a>
+                        <a href="/visuals/OITT-2025_schedule_color_version_FRIDAY_9x16.PNG" target="_blank" class="block" data-day="friday" data-date="2025-09-26">
+                            <img src="/visuals/OITT-2025_schedule_color_version_FRIDAY_9x16.PNG" class="w-full h-auto" alt="Friday Schedule">
+                        </a>
+                        <a href="/visuals/OITT-2025_schedule_color_version_SATURDAY_9x16.PNG" target="_blank" class="block" data-day="saturday" data-date="2025-09-27">
+                            <img src="/visuals/OITT-2025_schedule_color_version_SATURDAY_9x16.PNG" class="w-full h-auto" alt="Saturday Schedule">
+                        </a>
+                    </div>
                     <img src="visuals/OITT25_FULL LINEUP_small2x@2x.png" class="lg:w-2/3 mx-auto" alt="">
             </div>
+            <script>
+                (function() {
+                    function reorderScheduleImages() {
+                        const grid = document.getElementById('schedule-grid');
+                        if (!grid) return;
+
+                        const now = new Date();
+                        const currentDate = new Date(now.getFullYear(), now.getMonth(), now.getDate(), 7, 0, 0);
+
+                        const scheduleLinks = Array.from(grid.querySelectorAll('a[data-date]'));
+
+                        scheduleLinks.sort((a, b) => {
+                            const dateA = new Date(a.dataset.date + 'T07:00:00');
+                            const dateB = new Date(b.dataset.date + 'T07:00:00');
+
+                            const isPastA = dateA < currentDate;
+                            const isPastB = dateB < currentDate;
+
+                            if (isPastA && !isPastB) return 1;
+                            if (!isPastA && isPastB) return -1;
+
+                            return dateA - dateB;
+                        });
+
+                        scheduleLinks.forEach(link => {
+                            grid.appendChild(link);
+                        });
+                    }
+
+                    reorderScheduleImages();
+
+                    setInterval(reorderScheduleImages, 60000);
+                })();
+            </script>
             </div>
             {{ partial:page_builder/block }}
             {{# <div class="flex flex-col items-center justify-center gap-y-0 leading-none text-osmosis-gray mb-8">
